# github_stlworkshop

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  main_demo.cpp
registration/: CMakeLists.txt  main_registration.cpp
secondorder/: CMakeLists.txt  main_secondorder.cpp
set_tshirts/: CMakeLists.txt  main_tshirts.cpp
socks/: CMakeLists.txt  main_socks.cpp
soldiers/: CMakeLists.txt  main_soldiers.cpp
sorting_bankaccounts/: CMakeLists.txt  main_bankaccounts.cpp
sorting_points/: CMakeLists.txt  a.out  main_points2D.cpp  problem_sort2D.txt
