cmake_minimum_required(VERSION 3.23)
set(CMAKE_CXX_STANDARD 17)

project(github_stlworkshop)

add_subdirectory(sorting_points)
add_subdirectory(sorting_bankaccounts)
add_subdirectory(registration)
add_subdirectory(secondorder)
add_subdirectory(socks)
add_subdirectory(soldiers)
add_subdirectory(set_tshirts)